[feat] apply event api
